added ecucation and hobbies

--- a/personal website/index.html
+++ b/personal website/index.html
@@ -5,12 +5,29 @@
     <title>Mukesh's personal website</title>
   </head>
   <body>
-    <img src = ""
+    <img
+      src="images/WhatsApp Image 2023-03-06 at 10.24.31 PM.jpeg"
+      alt="mypic"
+      width="300"
+      height="400"
+    />
     <h1>Mukesh Negi</h1>
     <p>
       <em> 2nd year student in <strong> B.Tech C.S.E</strong></em>
     </p>
-    <hr>
-
+    <hr />
+    <h3>Education :</h3>
+    <ul>
+      <li><strong> School : </strong> <em> General B.C. Joshi APS</em></li>
+      <li>
+        <strong> College : </strong> <em> Graphic Era Hill University</em>
+      </li>
+    </ul>
+    <h3>My Hobbies :</h3>
+    <ol>
+      <li>Working Out</li>
+      <li>Playing Mobile Games</li>
+      <li>Playing and Watching Cricket</li>
+    </ol>
   </body>
 </html>
