--- a/personal website/index.html
+++ b/personal website/index.html
@@ -29,5 +29,7 @@
       <li>Playing Mobile Games</li>
       <li>Playing and Watching Cricket</li>
     </ol>
+    <h3>Connect With Me :</h3>
+    <a href="contacts.html"> <strong> Let's Connect </strong> </a>
   </body>
 </html>
