--- a/personal website/index.html
+++ b/personal website/index.html
@@ -5,16 +5,28 @@
     <title>Mukesh's personal website</title>
   </head>
   <body>
-    <img
-      src="images/WhatsApp Image 2023-03-06 at 10.24.31 PM.jpeg"
-      alt="mypic"
-      width="300"
-      height="400"
-    />
-    <h1>Mukesh Negi</h1>
-    <p>
-      <em> 2nd year student in <strong> B.Tech C.S.E</strong></em>
-    </p>
+    <table cellspacing="20">
+      <tr>
+        <td>
+          <img
+            src="images/WhatsApp Image 2023-03-06 at 10,24,31 PM-photoaidcom-cropped.jpeg"
+            alt="mypic"
+            height="200"
+            width="200"
+          />
+        </td>
+        <td>
+          <h1>Mukesh Negi</h1>
+          <p>
+            <em> 2nd year student in <strong> B.Tech C.S.E</strong></em>
+          </p>
+          <p>
+            <em> From Pithoragarh, Uttarakhand, India</em>
+          </p>
+        </td>
+      </tr>
+    </table>
+
     <hr />
     <h3>Education :</h3>
     <ul>
@@ -29,6 +41,29 @@
       <li>Playing Mobile Games</li>
       <li>Playing and Watching Cricket</li>
     </ol>
+
+    <h3>Skills :</h3>
+    <table border="1">
+      <thead>
+        <th>Year</th>
+        <th>Skill</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2021</td>
+          <td>C</td>
+        </tr>
+        <tr>
+          <td>2022</td>
+          <td>C++</td>
+        </tr>
+        <tr>
+          <td>2023</td>
+          <td>Java</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr />
     <h3>Connect With Me :</h3>
     <a href="contacts.html"> <strong> Let's Connect </strong> </a>
   </body>
