--- a/personal website/index.html
+++ b/personal website/index.html
@@ -35,31 +35,28 @@
         <strong> College : </strong> <em> Graphic Era Hill University</em>
       </li>
     </ul>
+    <hr />
     <h3>My Hobbies :</h3>
     <ol>
       <li>Working Out</li>
       <li>Playing Mobile Games</li>
       <li>Playing and Watching Cricket</li>
     </ol>
-
+    <hr />
     <h3>Skills :</h3>
-    <table border="1">
+    <table border="1" cellspacing="10">
       <thead>
-        <th>Year</th>
         <th>Skill</th>
+        <th>Experience</th>
       </thead>
       <tbody>
         <tr>
-          <td>2021</td>
-          <td>C</td>
+          <td>C++ Programming ⭐⭐⭐⭐⭐</td>
+          <td>Java Programming ⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>2022</td>
-          <td>C++</td>
-        </tr>
-        <tr>
-          <td>2023</td>
-          <td>Java</td>
+          <td>Web Dev ⭐⭐</td>
+          <td>Gaming ⭐</td>
         </tr>
       </tbody>
     </table>
