--- a/personal website/contacts.html
+++ b/personal website/contacts.html
@@ -21,5 +21,19 @@
         <a href="https://github.com/Mukesh-Negi"> <strong> Github</strong></a>
       </li>
     </ul>
+    <hr />
+    <form
+      action="mailto:negimukesh2056@gmail.com"
+      method="post"
+      enctype="text/plain"
+    >
+      <label> Your Name :</label>
+      <input type="text" name="yourName" /> <br />
+      <label> Your Email :</label>
+      <input type="email" name="yourMail " /> <br />
+      <label> Your Message : </label> <br />
+      <textarea name="yourMsg" rows="10" cols="30"></textarea> <br />
+      <input type="submit" />
+    </form>
   </body>
 </html>
