--- a/personal website/contacts.html
+++ b/personal website/contacts.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>connect with Mukesh</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h1><em> Connect With Me : </em></h1>
