--- a/personal website/index.html
+++ b/personal website/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Mukesh's personal website</title>
+    <link rel = "stylesheet" href = "CSS/styles.css">
   </head>
-  <body>
+  <body">
     <table cellspacing="20">
       <tr>
         <td>
